--- a/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Shared/_Layout.cshtml
+++ b/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
           asp-href-include="/lib/bootstrap/**/*.min.css"
           asp-href-exclude="**/*-reboot*,**/*-grid*" />
     <link rel="stylesheet" asp-href-include="/lib/fontawesome/css/*.css" />
+    <script src="~/lib/jquery/dist/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
     <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
