Correction : ajout des fonctionalitées Jquerry pour jQuerryValidate

--- a/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Product/Create.cshtml
+++ b/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Product/Create.cshtml
@@ -25,4 +25,4 @@
         <input class="btn btn-primary" type="submit" value="@Localizer["OK"]" />
     </div>
 </form>
-
+@* <span asp-validation-for="Name" class="text-danger"></span> *@
