Correction ajout panier supérieur stock Correction ajout porduit admin Correction nom variable test

--- a/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Product/Create.cshtml
+++ b/DotNetEnglishP3-master/P3AddNewFunctionalityDotNetCore/Views/Product/Create.cshtml
@@ -27,7 +27,7 @@
         <span asp-validation-for="Details" class="text-danger"></span>
     </div>
     <div class="text-center">
-        <input class="btn btn-primary" type="submit" value="@Localizer["OK"]" />
+       <input class="btn btn-primary" type="submit" asp-action="CreateProduct" value="@Localizer["OK"]" />
     </div>
 </form>
 
